# AI

./: README.md  pyproject.toml
customize_resume/: main.py
jobAts/: pyproject.toml
text-summarization/: textsummary.py  youtubesummary.py
