[project]
name = "jobats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "gradio>=6.3.0",
    "markdown-pdf>=1.10",
    "openai>=2.15.0",
    "pymupdf>=1.26.7",
    "requests>=2.32.5",
]
